--- a/public/UALogin/index.html
+++ b/public/UALogin/index.html
@@ -368,7 +368,7 @@
         />
         <h1 style="color: white">Unauthorized Login</h1>
         <a
-          href="https://nirbhay.me/spothole/"
+          href="https://www.onspot.click/onspot/"
           class="btn-go-home"
           target="_blank"
           >GO BACK HOME</a
