--- a/public/home/index.html
+++ b/public/home/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:image" content="https://i.ibb.co/yBrqFJ9/The-Citizen-App.png" />
     <meta name="robots" content="noarchive" />
-    <title>Spothole | Home</title>
+    <title>Onspot | Home</title>
     <!-- favicon -->
     <link
       rel="shortcut icon"
-      href="https://www.onspot.click/onspot/logo.png"
+      href="https://i.ibb.co/TMh0Yb7/Onspot.png"
       type="image/x-icon"
     />
     <!-- bootstrap -->
@@ -63,7 +63,7 @@
             <li><a href="#citizen-app">Citizen</a></li>
             <li><a href="#authority-app">Authority</a></li>
             <li><a href="#core-backend">Backend</a></li>
-            <li><a href="#maker">Maker</a></li>
+            <!--<li><a href="#maker">Maker</a></li> -->
             <li><a href="#stack">Stack</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
